# edamame_foundation

./: .cursorrules  .env  .gitignore  ARCHITECTURE.md  BLACKLISTS.md  CLAUDE.md  Cargo.toml  Cross.toml  Dockerfile.linux-test  LICENSE  Makefile  README.md  WHITELISTS.md  build.rs  deny.toml  renovate.json  update-threats-local.sh  update-threats.sh
.cursor/rules/: project.mdc
.github/workflows/: audit.yml  format.yml  rust.yml  rust_format.yml  tests.yml
ebpf/l7_ebpf_program/: Cargo.toml
ebpf/l7_ebpf_program/src/: lib.rs
edamame_foundation.xcodeproj/: project.pbxproj
examples/: bench_session_cache.rs  interactive_fix_launch.rs
proto/: edamame.proto
src/: admin.rs  advisor.rs  agent_a2a.rs  agent_alignment.rs  agent_cli_insight.rs  agent_dataflow.rs  agent_drift.rs  agent_enforcement.rs  agent_firewall.rs  agent_history.rs  agent_memory.rs  agent_owasp.rs  agent_plugin.rs  agent_plugin_icons.rs  agent_policy.rs  agent_precheck.rs  agent_provenance.rs  agent_response.rs  agent_subprocess.rs  agent_trust_controls.rs  agent_visibility.rs  agent_visibility_params.rs  agent_visibility_params_db.rs  asn_db.rs  backend.rs  blacklist_db.rs  blacklists.rs  blacklists_db.rs  client.rs  cloud_model.rs  cloud_model_fallback.rs  customlock.rs  cve_detection_params_db.rs  file_reveal.rs  fim_support.rs  foundation.rs  health.rs  helper_proto.rs  helper_rx.rs  helper_rx_utility.rs  (+65 more)
src/agent_transcripts/: claude_code.rs  claude_desktop.rs  codex.rs  craft.rs  cursor.rs  hermes.rs  mod.rs  openclaw.rs  parsing.rs  session_cache.rs  tests.rs
src/customlock/: mod.rs  release.rs
src/lanscan/: arp.rs  asn.rs  blacklists.rs  blacklists_db.rs  broadcast.rs  capture.rs  device_info.rs  dns.rs  interface.rs  ip.rs  l7.rs  l7_ebpf.rs  mdns.rs  mod.rs  neighbors.rs  oui.rs  packets.rs  port_info.rs  port_vulns.rs  profiles.rs  resolver.rs  sessions.rs  vendor_vulns.rs  whitelists.rs  whitelists_db.rs
tools/: encode_cloud_fallback.py
