[package]
name = "edamame_foundation"
version = "0.7.0"
edition = "2021"

[lints.rust]
async_fn_in_trait = "allow"

[features]
default = []
packetcapture = [ "pcap", "pnet_packet", "hickory-resolver", "dns-parser", "sysinfo", "netstat2" ]

[lib]
# Dynamic lib version is not used on apple platforms as it's painful, but we must use it on Windows, Linux and Android
# We must keep lib if we want to build targets with cargo
crate-type = [ "staticlib", "cdylib", "lib" ]

[dependencies]
edamame_backend = { git = "https://github.com/edamametechnologies/edamame_backend", version = "0.3.3" }
#edamame_backend = { path = "../edamame_backend" }

# Sentry
sentry = "0.34.0"
sentry-tracing = "0.34.0"

# Global statics w/ mutex
lazy_static = "1.5.0"
once_cell = "1.19.0"

# Strum
strum = "0.26.3"
strum_macros = "0.26.4"

# JSON
serde = { version = "1.0.207", features = ["derive"] }
serde_json = "1.0.125"
serde_with = "3.9.0"
uuid = { version = "1.10.0", features = [
    "v4",
    "v5",
    "fast-rng",
    "macro-diagnostics",
]}

# Logging
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt"] }
tracing-appender = "0.2.3"
humantime = "2.1.0"

# gRPC server/client, marked as optional
tonic = { version = "0.12.1", features = ["tls"] }
prost = "0.13.1"

base64 = "0.22.1"

# CLI support
run_script = "0.11.0"
powershell_script = "1.1.0"

# Async
async-trait = "0.1.81"
parking_lot = "0.12.3"
futures = "0.3.30"
futures-util = "0.3.30"
tokio = { version = "1.39.2", features = ["full", "tracing"] }
dashmap = "6.0.1"
# For tokio debugging
#console-subscriber = "0.4.0"

# Advanced time
chrono = { version = "0.4.38", features = ["serde"] }

# Network utils
ipnet = { version = "2.9.0" }
# mdns discovery that works on all platforms and tolerates foreign language characters
# wez-mdns = "0.1.1"
# Our own mdns implementation forked from wez-mdns
wez-mdns = { git = "https://github.com/edamametechnologies/mdns" }

# Misc
rand = "0.8.5"
anyhow = { version = "1.0.86" }
regex = "1.10.6"
sorted-vec = "0.8.3"
encoding_rs = "0.8.34"
thiserror = "1.0.63"

# Not WASI/WASIX/WASM
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]

# Network utils
# See https://github.com/abaumhauer/eui48/issues/29 - warning should be suppressed, but it's not...
eui48 = { version = "1.1.0", features = ["disp_hexstring", "serde"] }
oui = "0.8.1"
ipnet = "2.9.0"
csv = "1.0.10"

# SSL related deps for iOS/Android (rustls doesn't work on iOS/Android due to missing certs but native-tls does)
[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
reqwest = { version = "0.12.5", default-features = false, features = ["native-tls", "json", "gzip"] }

# SSL related deps for not iOS/Android
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
reqwest = { version = "0.12.5", features = ["json", "gzip"] }

# Not supported on iOS an Android (only implemented in Flutter for those platforms)
[target.'cfg(any(target_os = "macos", target_os = "windows", target_os = "linux"))'.dependencies]
network-interface = "2.0.0"

# Libpnet is a dependency that is not working on iOS/Android and depends on WinPcap on windows (that we don't want to ship with the binary)
[target.'cfg(any(target_os = "macos", target_os = "linux"))'.dependencies]
arp-toolkit = "0.3.2"
# Capture on macOS, Linux (Windows not enabled pending license for ngpcap)
# pcap requires libpcap-devel on Linux, and Npcap on Windows
pcap = { version = "2.2.0" , optional = true, features = ["capture-stream"] }
pnet_packet = { version = "0.35.0", optional = true }
hickory-resolver = { version = "0.24.1", optional = true }
dns-parser = { version = "0.8.0", optional = true }
# System information
sysinfo = { version = "0.32.0", optional = true }
# netstat2 breaks with libc higher than v0.2.159 on Linux
libc = "=0.2.159"
netstat2 = { version = "0.9.1", optional = true }

# Windows
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58.0", features = [ "Data_Xml_Dom", "Win32_Foundation", "Win32_Security", "Win32_System_Threading", "Win32_System_SystemServices", "Win32_UI_WindowsAndMessaging" ] }

# macOS - system-configuration-sys is including a symbol that is rejected by the App Store
[patch.crates-io]
system-configuration = { git = "https://github.com/edamametechnologies/system-configuration-rs", branch = "main" }
system-configuration-sys = { git = "https://github.com/edamametechnologies/system-configuration-rs", branch = "main" }


# Android
[target.'cfg(target_os = "android")'.dependencies]
tracing-android = "0.2.0"

# iOS or macOS
[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
tracing-oslog = "0.2.0"

[dev-dependencies]
serial_test = "3.1.1"

[build-dependencies]

# Conditional compilation for build dependencies
# protobuf->Rust compiler
tonic-build = "0.12.1"

