[package]
name = "edamame_foundation"
version = "0.9.63"
edition = "2021"

[lints.rust]
async_fn_in_trait = "allow"

[features]
default = []
tokio-console = []
packetcapture = [ "flodbadd/packetcapture" ]

[lib]
# Dynamic lib version is not used on apple platforms as it's painful, but we must use it on Windows, Linux and Android
# We must keep lib if we want to build targets with cargo
crate-type = [ "staticlib", "cdylib", "lib" ]

[dependencies]
# Local copy in order to allow rapid development/debug
#edamame_backend = { path = "../edamame_backend" }
edamame_backend = { git = "https://github.com/edamametechnologies/edamame_backend", branch = "main" }
# Local copy in order to allow rapid development/debug
#undeadlock = { path = "../undeadlock" }
undeadlock = { git = "https://github.com/edamametechnologies/undeadlock", branch = "main" }
# Local copy in order to allow rapid development/debug
#flodbadd = { path = "../flodbadd" }
flodbadd = { git = "https://github.com/edamametechnologies/flodbadd", branch = "main" }
# Local copy in order to allow rapid development/debug
#edamame_models = { path = "../edamame_models" }
edamame_models = { git = "https://github.com/edamametechnologies/threatmodels-rs", branch = "main" }

# Sentry
# Beware it will use reqwest with native-tls by default, not rustls
sentry = { version = "0.42.0", default-features = false, features = ["reqwest", "rustls"] }
sentry-tracing = "0.42.0"

# Global statics w/ mutex
lazy_static = "1.5.0"
once_cell = "1.21.3"

# Strum
strum = "0.27.2"
strum_macros = "0.27.2"

# JSON
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
serde_with = "3.14.0"
uuid = { version = "1.18.1", features = [
    "v4",
    "v5",
    "fast-rng",
    "macro-diagnostics",
]}

# Hashing
sha2 = "0.10.9"
hex = "0.4.3"
# Logging
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
tracing-appender = "0.2.3"
humantime = "2.2.0"

# gRPC server/client
# This uses rustls
tonic = { version = "0.14.2", features = ["_tls-any"] }
prost = "0.14.1"
tonic-prost = "0.14.2"

base64 = "0.22.1"

# CLI support
run_script = "0.11.0"
powershell_script = "1.1.0"

# Async
async-trait = "0.1.89"
parking_lot = "0.12.4"
futures = "0.3.31"
futures-util = "0.3.31"
tokio = { version = "1.47.1", features = ["full", "tracing"] }
console-subscriber = "0.4.1"
dashmap = "6.1.0"

# Advanced time
chrono = { version = "0.4.42", features = ["serde"] }

# Network utils
socket2 = "0.6.0"
ipnet = "2.11.0"
# mdns discovery that works on all platforms and tolerates foreign language characters
# wez-mdns = "0.1.1"
# Our own mdns implementation forked from wez-mdns
wez-mdns = { git = "https://github.com/edamametechnologies/mdns" }

# Misc
rand = "0.9.2"
anyhow = { version = "1.0.99" }
regex = "1.11.2"
sorted-vec = "0.8.10"
encoding_rs = "0.8.35"
thiserror = "2.0.16"
serial_test = "3.2.0"

# Encrypted env (weak)
envcrypt = "0.5.0"

# Not WASI/WASIX/WASM
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]

# Network utils
macaddr = { version = "1.0.1", features = ["serde"] }
oui = "0.8.1"
ipnet = "2.11.0"
csv = "1.3.1"
# Prevent reqwest from using native-tls
reqwest = { version = "0.12.23", default-features = false, features = ["gzip", "rustls-tls"] }

# macOS
[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2.175"

# Android
[target.'cfg(target_os = "android")'.dependencies]
# Native Android tracing
tracing-android = "0.2.0"

[target.'cfg(any(target_os = "macos", target_os = "windows", target_os = "linux"))'.dependencies]
# Not supported on iOS an Android (only implemented in Flutter for those platforms)
network-interface = "2.0.3"

[target.'cfg(any(target_os = "macos", target_os = "linux"))'.dependencies]
users = "0.11.0"
# Arp-toolkit depends on Libpnet, a dependency that is not working on iOS/Android and depends on WinPcap on windows (we use an alternative on Windows)
arp-toolkit = "0.3.2"

# Windows
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62.0", features = [ "Data_Xml_Dom", "Win32_Foundation", "Win32_Security", "Win32_System_Threading", "Win32_System_SystemServices", "Win32_UI_WindowsAndMessaging", "Win32_NetworkManagement", "Win32_NetworkManagement_IpHelper", "Win32_Networking", "Win32_Networking_WinSock", "Win32_NetworkManagement_Ndis", "Win32_NetworkManagement_NetManagement" ] }

[dev-dependencies]
serial_test = "3.2.0"

[build-dependencies]
# Conditional compilation for build dependencies
# protobuf->Rust compiler
tonic-prost-build = "0.14.2"
